# thisorthat

./: .gitignore  .pre-commit-config.yaml  GEMINI.md  README.md  justfile
.github/workflows/: ci.yml
backend/: .gitignore  docker-compose.yml  pyproject.toml
backend/src/: db.py  main.py
backend/src/choices/: models.py  router.py  schemas.py
backend/src/options/: models.py  router.py  schemas.py
backend/src/tests/choices/: test_choices_router.py
backend/src/tests/options/: test_options_router.py
backend/src/users/: models.py
docs/: DesignDocument.md
docs/assets/sequencediagrams/: README.md
docs/assets/sequencediagrams/mvp_interactions/: 001_initial_interaction.txt
